<resources>
    <string name="app_name">homebrewed</string>
    <string name="usernamelabel">Username</string>
    <string name="passwordlabel">Password</string>
    <string name="mod_one">BDY</string>
    <string name="mod_two">MND</string>
    <string name="mod_three">FLX</string>
    <string name="mod_four">BSN</string>
    <string name="mod_five">CHM</string>
    <string name="mod_six">DCT</string>
    <string name="mod_seven">MGK</string>
    <string name="mod_eight">RGN</string>
    <string name="mod_nine">ACA</string>
    <string name="logodesc">A dodecahedron with the app name - Home Brewed</string>
    <string name="rulebookbtndesc">A button with the text View Rule Book</string>
    <string name="itemstorebtndesc">A button with the text View Item Store</string>
    <string name="abilitybtndesc">A button with the text View Ability Library </string>
    <string name="createcharbtndesc">A button with the text Create Character</string>
    <string name="delcharbtndesc">A button with the text Delete Characters</string>
    <string name="healthrollinstructions">Roll 5 D10 to determine starting Health. If more than 3 results are less than 10, count the two lowest as 10.</string>
    <string name="modrollinstructions">Roll 10 D8 and assign points to each modifier as desired. Every 10 points is 1 level to that modifier</string>
    <string name="abilityselectinstructions">Select three abilities from the list - please select three unique abilities to proceed. Class selection determines abilities</string>
    <string-array name="species">
        <item>
            Human Being
        </item>
        <item>
            Magical Being
        </item>
        <item>
            Angelic Being
        </item>
        <item>
            Demonic Being
        </item>
    </string-array>
    <string-array name="classes">
        <item>
            Dancer
        </item>
        <item>
            Magician
        </item>
        <item>
            Gambler
        </item>
        <item>
            Bartender
        </item>
        <item>
            Mobster
        </item>
        <item>
            Manager
        </item>
        <item>
            Construction
        </item>
        <item>
            Entrepreneur
        </item>
        <item>
            Fortune Teller
        </item>
    </string-array>
</resources>